--- a/poApprovl.html
+++ b/poApprovl.html
@@ -12,7 +12,9 @@
     <? if (pending && pending.length>0) { ?>
       <? for (let i=0;i<pending.length;i++){ let p = pending[i]; ?>
         <div class="po-row" id="po-<?= p.poId ?>">
-          <div><strong><?= p.poId ?></strong> (PR: <?= p.prId ?>) — <?= p.site ?> — ₹<?= Number(p.totalValue).toFixed(2) ?></div>
+          <div>
+            <strong><?= p.poId ?></strong> (PR: <?= p.prId || 'N/A' ?>) — <?= p.site ?> — ₹<?= Number(p.totalValue).toFixed(2) ?>
+          </div>
           <div>
             <button class="btn btn-approve" onclick="decide('<?= p.poId ?>','Approved')">Approve</button>
             <button class="btn btn-reject" onclick="decide('<?= p.poId ?>','Rejected')">Reject</button>
